# robotik_projekt_malroboter

./: EndeffectorToMarker Richtig.csv  EndeffectorToMarker.csv  README.md  RobotBaseToTrackingSystem Richtig.csv  RobotBaseToTrackingSystem.csv  befehle.txt  cube.scene
install/: local_setup.sh  setup.sh
install/geometric_shapes/lib/: libgeometric_shapes.so.2.1.2
install/ur5e_bringup/share/ur5e_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_bringup/share/ur5e_bringup/cmake/: ur5e_bringupConfig.cmake
install/vrpn/include/: vrpn_Configure.h
launch/: calibrate_robot.py  draw_picture.py  setupRobotTrackingConnection.py
log/: latest_build
src/: test.py
src/interfaces/: CMakeLists.txt
src/interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/interfaces/log/: latest_build
src/interfaces/msg/: Pointcoords.msg
src/interfaces/srv/: Getpose.srv  Move.srv
src/move_client/: package.xml  setup.cfg  setup.py
src/move_it_service/: CMakeLists.txt
src/move_it_service/src/: move_server.cpp
src/move_it_service_python/: package.xml  setup.cfg  setup.py
src/picture_to_points_service/: setup.cfg  setup.py
src/robprakt/: package.xml  package.xml~  setup.cfg  setup.py  setup.py~
src/robprakt/robprakt/: get_matrices.py~  vacuum_client.py  vacuum_control.py~
src/robprakt_interfaces/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/robprakt_interfaces/srv/: seturio.srv~
src/tracking_service/: setup.cfg  setup.py
src/tracking_service/tracking_service/: test_client.py  whiteboard_tracking.py
src/trajectory/: package.xml  setup.py
src/trajectory/trajectory/: calibration.py  trajectoryPlanningNew.py  (+1 more)
src/ur5e_bringup/: CMakeLists.txt
(+362 files in other folders)
